<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="registerViewModel"
            type="ammu.com.privatechat.views.register.RegisterViewModel" />
    </data>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llSocialRegister"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/primaryColor"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btFacecbook"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Register using facebook" />

                <Button
                    android:id="@+id/btGoogle"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Register using google" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top|center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivProfile"
                    imageUrl="@{registerViewModel.profileImage.get()}"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:onClick="@{()-> registerViewModel.pickImageFile()}"
                    android:layout_marginTop="25dp"
                    android:elevation="10dp"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="50dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:hint="@string/display_name"
                        android:inputType="textEmailAddress"
                        android:text="@={registerViewModel.displayName}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="50dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_email"
                        android:drawablePadding="10dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:text="@={registerViewModel.email}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="50dp">

                    <android.support.v7.widget.AppCompatEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_password"
                        android:drawablePadding="10dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={registerViewModel.password}" />
                </android.support.design.widget.TextInputLayout>

                <android.support.v7.widget.AppCompatButton
                    style="@style/PrimaryButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->registerViewModel.register()}"
                    android:text="@string/r_e_g_i_s_t_e_r" />

            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</layout>